--- a/plugins/mapper/attachments/src/main/java/es-plugin.properties
+++ b/plugins/mapper/attachments/src/main/java/es-plugin.properties
@@ -1,1 +1,1 @@
-plugin=org.elasticsearch.plugin.attachments.MapperAttachmentsPlugin
+plugin=org.elasticsearch.plugin.mapper.attachments.MapperAttachmentsPlugin
