--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ task explodedDist(dependsOn: [configurations.distLib], description: 'Builds a mi
     ant.delete { fileset(dir: explodedDistLibDir, includes: "slf4j-*.jar") } // no need for slf4j
     ant.delete { fileset(dir: explodedDistLibDir, includes: "jackson-*.jar") } // no need jackson, we jarjar it
     ant.delete { fileset(dir: explodedDistLibDir, includes: "joda-*.jar") } // no need joda, we jarjar it
-    ant.delete { fileset(dir: explodedDistLibDir, includes: "snakeyaml-*.jar") } // no need joda, we jarjar it
+    ant.delete { fileset(dir: explodedDistLibDir, includes: "snakeyaml-*.jar") } // no need snakeyaml, we jarjar it
 
     ant.chmod(dir: "$explodedDistDir/bin", perm: "ugo+rx", includes: "**/*")
 }
@@ -88,6 +88,7 @@ task zip(type: Zip, dependsOn: ['explodedDist']) {
     from(explodedDistDir) {
         into zipRootFolder
         exclude 'bin/elasticsearch'
+        exclude 'bin/plugin'
         exclude 'bin/service/elasticsearch'
         exclude 'bin/service/elasticsearch32'
         exclude 'bin/service/elasticsearch64'
@@ -96,6 +97,7 @@ task zip(type: Zip, dependsOn: ['explodedDist']) {
     from(explodedDistDir) {
         into zipRootFolder
         include 'bin/elasticsearch'
+        include 'bin/plugin'
         include 'bin/service/elasticsearch'
         include 'bin/service/elasticsearch32'
         include 'bin/service/elasticsearch64'
