update with more cloud providers
Former-commit-id: f88e01614a0a121ce3d4f52f0abe3bc2940999fa

--- a/plugins/cloud/build.gradle
+++ b/plugins/cloud/build.gradle
@@ -41,10 +41,26 @@ dependencies {
     compile("org.jclouds:jclouds-blobstore:$jcloudsVersion")
     compile("org.jclouds:jclouds-aws:$jcloudsVersion")
     compile("org.jclouds:jclouds-rackspace:$jcloudsVersion")
+    compile("org.jclouds:jclouds-atmos:$jcloudsVersion")
+    compile("org.jclouds:jclouds-azure:$jcloudsVersion")
+    compile("org.jclouds:jclouds-gogrid:$jcloudsVersion")
+    compile("org.jclouds:jclouds-vcloud:$jcloudsVersion")
+    compile("org.jclouds:jclouds-rimuhosting:$jcloudsVersion")
+    compile("org.jclouds:jclouds-terremark:$jcloudsVersion")
+    compile("org.jclouds:jclouds-bluelock:$jcloudsVersion")
+    compile("org.jclouds:jclouds-hostingdotcom:$jcloudsVersion")
 
     distLib("org.jclouds:jclouds-blobstore:$jcloudsVersion")
     distLib("org.jclouds:jclouds-aws:$jcloudsVersion")
     distLib("org.jclouds:jclouds-rackspace:$jcloudsVersion")
+    distLib("org.jclouds:jclouds-atmos:$jcloudsVersion")
+    distLib("org.jclouds:jclouds-azure:$jcloudsVersion")
+    distLib("org.jclouds:jclouds-gogrid:$jcloudsVersion")
+    distLib("org.jclouds:jclouds-vcloud:$jcloudsVersion")
+    distLib("org.jclouds:jclouds-rimuhosting:$jcloudsVersion")
+    distLib("org.jclouds:jclouds-terremark:$jcloudsVersion")
+    distLib("org.jclouds:jclouds-bluelock:$jcloudsVersion")
+    distLib("org.jclouds:jclouds-hostingdotcom:$jcloudsVersion")
 
     testCompile project(':test-testng')
     testCompile('org.testng:testng:5.10:jdk15') { transitive = false }
