move to beta-5 of jclouds
Former-commit-id: 596cfd273d69876ec446211ca7161895270b8f32

--- a/plugins/cloud/build.gradle
+++ b/plugins/cloud/build.gradle
@@ -34,7 +34,7 @@ repositories {
     mavenRepo urls: "http://java-xmlbuilder.googlecode.com/svn/repo"
 }
 
-jcloudsVersion = "1.0-SNAPSHOT"
+jcloudsVersion = "1.0-beta-5"
 
 dependencies {
     compile project(':elasticsearch')
