--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -17,7 +17,6 @@ processResources.doLast {
     }
 }
 
-
 manifest.mainAttributes("Implementation-Title": "ElasticSearch", "Implementation-Version": rootProject.version, "Implementation-Date": buildTimeStr)
 
 // no need to use the resource dir
@@ -26,6 +25,7 @@ sourceSets.test.resources.srcDirs 'src/test/java'
 
 dependencies {
     compile('jline:jline:0.9.94') { transitive = false }
+    compile files(rootProject.file("lib/sigar/sigar-1.6.3.jar").absolutePath)
 
     compile 'org.slf4j:slf4j-api:1.5.11'
     compile('org.slf4j:slf4j-log4j12:1.5.11') { transitive = false }
