upgrade to netty 3.2.0 CR1
Former-commit-id: f6509930c7253c41009290474f61e807fdf46b0f

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ allprojects {
 
     repositories {
         mavenCentral()
-        mavenRepo urls: 'http://repository.jboss.com/maven2/'
+        mavenRepo urls: 'https://repository.jboss.org/nexus/content/groups/public/'
         mavenRepo urls: 'http://elasticsearch.googlecode.com/svn/maven'
     }
 }
