--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     compile 'org.apache.lucene:lucene-queries:3.0.1'
     compile 'org.apache.lucene:lucene-fast-vector-highlighter:3.0.1'
 
-    compile('org.jboss.netty:netty:3.1.5.GA') { transitive = false }
+    compile('org.jboss.netty:netty:3.2.0.CR1') { transitive = false }
 
     testCompile project(':test-testng')
     testCompile('org.testng:testng:5.10:jdk15') { transitive = false }
