--- a/plugins/cloud/build.gradle
+++ b/plugins/cloud/build.gradle
@@ -7,8 +7,6 @@ archivesBaseName = "elasticsearch-cloud"
 
 explodedDistDir = new File(distsDir, 'exploded')
 
-manifest.mainAttributes("Implementation-Title": "ElasticSearch::Plugins::Cloud", "Implementation-Version": rootProject.version, "Implementation-Date": buildTimeStr)
-
 configurations.compile.transitive = true
 configurations.testCompile.transitive = true
 
@@ -123,6 +121,13 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
+}
+
+jar {
+//    from sourceSets.main.allJava
+    manifest {
+        attributes("Implementation-Title": "ElasticSearch", "Implementation-Version": rootProject.version, "Implementation-Date": buildTimeStr)
+    }
 }
 
 artifacts {
