--- a/plugins/transport/memcached/build.gradle
+++ b/plugins/transport/memcached/build.gradle
@@ -7,8 +7,6 @@ archivesBaseName = "elasticsearch-transport-memcached"
 
 explodedDistDir = new File(distsDir, 'exploded')
 
-manifest.mainAttributes("Implementation-Title": "ElasticSearch::Plugins::Transport::Memcached", "Implementation-Version": rootProject.version, "Implementation-Date": buildTimeStr)
-
 configurations.compile.transitive = true
 configurations.testCompile.transitive = true
 
@@ -16,10 +14,12 @@ configurations.testCompile.transitive = true
 sourceSets.main.resources.srcDirs 'src/main/java'
 sourceSets.test.resources.srcDirs 'src/test/java'
 
-// add the source files to the dist jar
-//jar {
+jar {
 //    from sourceSets.main.allJava
-//}
+    manifest {
+        attributes("Implementation-Title": "ElasticSearch", "Implementation-Version": rootProject.version, "Implementation-Date": buildTimeStr)
+    }
+}
 
 configurations {
     dists
@@ -84,10 +84,12 @@ task release(dependsOn: [zip]) << {
 
 configurations {
     deployerJars
+    tools
 }
 
 dependencies {
     deployerJars "org.apache.maven.wagon:wagon-http:1.0-beta-2"
+    tools "com.google.code:jarjar:1.0"
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -103,6 +105,36 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 artifacts {
     archives sourcesJar
     archives javadocJar
+}
+
+jar << {
+    jarjarArchivePath = new File(jar.archivePath.absolutePath + ".jarjar.jar")
+    project.ant {
+        taskdef name: "jarjar", classname: "com.tonicsystems.jarjar.JarJarTask", classpath: configurations.tools.asPath
+        jarjar(jarfile: jarjarArchivePath) {
+            zipfileset(src: jar.archivePath)
+            configurations.compile.files.findAll {file ->
+                ['netty'].any { file.name.contains(it) }
+            }.each { jarjarFile ->
+                zipfileset(src: jarjarFile) {
+                    exclude(name: "META-INF/**")
+                }
+            }
+            rule pattern: "org.jboss.netty.**", result: "org.elasticsearch.util.netty.@1"
+        }
+        delete(file: jar.archivePath)
+        copy(file: jarjarArchivePath, tofile: jar.archivePath)
+        delete(file: jarjarArchivePath)
+
+        // hack, we want to reuse the jarjar of elasticsearch into util.netty, but don't want it to be in memcached jar
+        unjar(src: jar.archivePath, dest: "build/tmp/extracted")
+        delete(dir: "build/tmp/extracted/org/elasticsearch/util/netty")
+        delete(dir: "build/tmp/extracted/org/jboss")
+
+        delete(file: jar.archivePath)
+        jar(destfile: jar.archivePath, basedir: "build/tmp/extracted", manifest: "build/tmp/extracted/META-INF/MANIFEST.MF")
+        delete(dir: "build/tmp/extracted")
+    }
 }
 
 uploadArchives {
