--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -17,8 +17,6 @@ processResources.doLast {
     }
 }
 
-manifest.mainAttributes("Implementation-Title": "ElasticSearch", "Implementation-Version": rootProject.version, "Implementation-Date": buildTimeStr)
-
 // no need to use the resource dir
 sourceSets.main.resources.srcDirs 'src/main/java', rootProject.file('config')
 sourceSets.test.resources.srcDirs 'src/test/java'
@@ -58,10 +56,12 @@ dependencies {
     tools "com.google.code:jarjar:1.0"
 }
 
-// add the source files to the dist jar
-//jar {
+jar {
 //    from sourceSets.main.allJava
-//}
+    manifest {
+        attributes("Implementation-Title": "ElasticSearch", "Implementation-Version": rootProject.version, "Implementation-Date": buildTimeStr)
+    }
+}
 
 jar << {
     jarjarArchivePath = new File(jar.archivePath.absolutePath + ".jarjar.jar")
@@ -70,7 +70,7 @@ jar << {
         jarjar(jarfile: jarjarArchivePath) {
             zipfileset(src: jar.archivePath)
             configurations.compile.files.findAll {file ->
-                ['jackson', 'joda', 'snakeyaml'].any { file.name.contains(it) }
+                ['jackson', 'joda', 'snakeyaml', 'netty'].any { file.name.contains(it) }
             }.each { jarjarFile ->
                 zipfileset(src: jarjarFile) {
                     exclude(name: "META-INF/**")
@@ -79,10 +79,22 @@ jar << {
             rule pattern: "org.codehaus.jackson.**", result: "org.elasticsearch.util.jackson.@1"
             rule pattern: "org.joda.**", result: "org.elasticsearch.util.joda.@1"
             rule pattern: "org.yaml.**", result: "org.elasticsearch.util.yaml.@1"
+            rule pattern: "org.jboss.netty.**", result: "org.elasticsearch.util.netty.@1"
         }
         delete(file: jar.archivePath)
         copy(file: jarjarArchivePath, tofile: jar.archivePath)
         delete(file: jarjarArchivePath)
+
+        // seems like empty dirst still exists, unjar and clean them
+        unjar(src: jar.archivePath, dest: "build/tmp/extracted")
+        delete(dir: "build/tmp/extracted/org/codehaus")
+        delete(dir: "build/tmp/extracted/org/joda")
+        delete(dir: "build/tmp/extracted/org/yaml")
+        delete(dir: "build/tmp/extracted/org/jboss")
+
+        delete(file: jar.archivePath)
+        jar(destfile: jar.archivePath, basedir: "build/tmp/extracted")
+        delete(dir: "build/tmp/extracted")
     }
 }
 
@@ -149,8 +161,7 @@ uploadArchives {
             pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('jackson') }
             pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('joda') }
             pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('snakeyaml') }
-            // keep netty required for simpler usage
-//            pom.dependencies.findAll {dep -> dep.groupId == 'org.jboss.netty' }*.scope = 'runtime'
+            pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('netty') }
         }
     }
 }
