add back old jboss repo for jarjar
Former-commit-id: f6a1a2fefba17851b458ee0ca6fba7e3691f891e

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ allprojects {
         mavenCentral()
         mavenRepo urls: 'https://repository.jboss.org/nexus/content/repositories/releases/'
         mavenRepo urls: 'http://elasticsearch.googlecode.com/svn/maven'
+        mavenRepo urls: 'http://repository.jboss.org/maven2' // (this one has jarjar version 1.0)
     }
 }
 
