add sigar to the service classpath
Former-commit-id: fcf3697e510c5ea70b4d1c208dcb0e02abfa44ca

--- a/bin/service/elasticsearch.conf
+++ b/bin/service/elasticsearch.conf
@@ -29,6 +29,7 @@ wrapper.working.dir=%ES_HOME%
 #  needed starting from 1
 wrapper.java.classpath.1=%ES_HOME%/bin/service/lib/wrapper.jar
 wrapper.java.classpath.2=%ES_HOME%/lib/*.jar
+wrapper.java.classpath.3=%ES_HOME%/lib/sigar/*.jar
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=%ES_HOME%/bin/service/lib
