remove the need for global defined grooby library, use the one gradle downloaded
Former-commit-id: c59945eec26252771e26762a392049581920b8ef

--- a/plugins/client/groovy/build.gradle
+++ b/plugins/client/groovy/build.gradle
@@ -30,7 +30,7 @@ configurations {
 dependencies {
     compile project(':elasticsearch')
 
-    groovy group: 'org.codehaus.groovy', name: 'groovy', version: '1.7.2'
+    groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.7.2'
 
     testCompile project(':test-testng')
     testCompile('org.testng:testng:5.10:jdk15') { transitive = false }
