--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include 'test-integration'
 include 'benchmark-micro'
 
 include 'plugins-cloud'
+include 'plugins-hadoop'
 include 'plugins-analysis-icu'
 include 'plugins-mapper-attachments'
 include 'plugins-client-groovy'
