--- a/plugins/hadoop/build.gradle
+++ b/plugins/hadoop/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     testCompile project(':test-testng')
     testCompile('org.testng:testng:5.10:jdk15') { transitive = false }
+    testCompile 'org.hamcrest:hamcrest-all:1.1'
 }
 
 test {
