Query DSL: custom score (scripted) query, closes #220.
Former-commit-id: 751c56f31ee4689a3df4b86ced46e2bd6fc29abf

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ allprojects {
     repositories {
         mavenCentral()
         mavenRepo urls: 'https://repository.jboss.org/nexus/content/groups/public'
+        mavenRepo urls: 'http://repository.codehaus.org/'
         mavenRepo urls: 'http://elasticsearch.googlecode.com/svn/maven'
     }
 }
@@ -82,7 +83,8 @@ task explodedDist(dependsOn: [configurations.distLib], description: 'Builds a mi
     ant.delete { fileset(dir: explodedDistLibDir, includes: "joda-*.jar") } // no need joda, we jarjar it
     ant.delete { fileset(dir: explodedDistLibDir, includes: "snakeyaml-*.jar") } // no need snakeyaml, we jarjar it
     ant.delete { fileset(dir: explodedDistLibDir, includes: "sigar-*.jar") } // no need sigar directly under lib...
-    ant.delete { fileset(dir: explodedDistLibDir, includes: "netty-*.jar") } // no need sigar directly under lib...
+    ant.delete { fileset(dir: explodedDistLibDir, includes: "netty-*.jar") } // no need netty directly under lib...
+    ant.delete { fileset(dir: explodedDistLibDir, includes: "mvel2-*.jar") } // no need mvel2 directly under lib...
 
     ant.chmod(dir: "$explodedDistDir/bin", perm: "ugo+rx", includes: "**/*")
 }
