--- a/config/logging.yml
+++ b/config/logging.yml
@@ -2,6 +2,7 @@ rootLogger: INFO, console, file
 logger:
   # log action execution errors for easier debugging
   action : DEBUG
+  discovery.zen.fd: DEBUG
 
 appender:
   console:
