refactor hdfs gateway to use the new common blobstore
Former-commit-id: 3d84af2a4045c7c8cf84dbf20de2a7c452868e54

--- a/config/logging.yml
+++ b/config/logging.yml
@@ -2,6 +2,7 @@ rootLogger: INFO, console, file
 logger:
   # log action execution errors for easier debugging
   action : DEBUG
+  index.gateway : DEBUG
 
 appender:
   console:
