upgrade to netty 3.2.1.Final
Former-commit-id: d5f35f3cee61a3107320b16c8a6de54863a21d1f

--- a/modules/jarjar/build.gradle
+++ b/modules/jarjar/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     runtime 'org.codehaus.jackson:jackson-core-asl:1.5.2'
     runtime 'org.yaml:snakeyaml:1.6'
 
-    runtime('org.jboss.netty:netty:3.2.0.CR1') { transitive = false }
+    runtime('org.jboss.netty:netty:3.2.1.Final') { transitive = false }
     runtime('com.ning:async-http-client:1.0.0-SNAPSHOT') { transitive = false }
 }
 
