upgrade to async http client 1.0.0
Former-commit-id: 0d7cebbaf01ad77268bed1133b7c0fb0b0a053e4

--- a/modules/jarjar/build.gradle
+++ b/modules/jarjar/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     runtime 'org.yaml:snakeyaml:1.6'
 
     runtime('org.jboss.netty:netty:3.2.1.Final') { transitive = false }
-    runtime('com.ning:async-http-client:1.0.0-SNAPSHOT') { transitive = false }
+    runtime('com.ning:async-http-client:1.0.0') { transitive = false }
 }
 
 configurations {
