more work on reusing work node level data, now when recovering from peers
Former-commit-id: edf0075025b35336af2ff122c2df212e946fb5fc

--- a/config/logging.yml
+++ b/config/logging.yml
@@ -1,7 +1,14 @@
 rootLogger: INFO, console, file
 logger:
   # log action execution errors for easier debugging
-  action : DEBUG
+  action: DEBUG
+
+  # gateway
+  #gateway: DEBUG
+  #index.gateway: DEBUG
+
+  # peer shard recovery
+  #index.shard.recovery: DEBUG
 
 appender:
   console:
