--- a/plugins/transport/memcached/build.gradle
+++ b/plugins/transport/memcached/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     testCompile project(':test-testng')
     testCompile('org.testng:testng:5.10:jdk15') { transitive = false }
+    testCompile 'org.hamcrest:hamcrest-all:1.1'
     testCompile 'spy:memcached:2.4.2'
 }
 
