add snapshot repo
Former-commit-id: b1c0a78c8ec7a350cab4123afc88c87ab1872de0

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ allprojects {
         mavenRepo urls: 'http://repository.codehaus.org/'
         mavenRepo urls: 'http://elasticsearch.googlecode.com/svn/maven'
         mavenRepo urls: 'http://oss.sonatype.org/content/repositories/releases'
+        mavenRepo urls: 'http://oss.sonatype.org/content/repositories/snapshots'
     }
 }
 
