remove cloud plugin, reimplement an AWS specific cloud plugin with S3 gateway and EC2 discovery
Former-commit-id: 77b6d1d8b8d304578fd97ea159b7109671eaacc6

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,7 +8,7 @@ include 'test-integration'
 
 include 'benchmark-micro'
 
-include 'plugins-cloud'
+include 'plugins-cloud-aws'
 include 'plugins-hadoop'
 include 'plugins-analysis-icu'
 include 'plugins-mapper-attachments'
