--- a/config/logging.yml
+++ b/config/logging.yml
@@ -2,6 +2,8 @@ rootLogger: INFO, console, file
 logger:
   # log action execution errors for easier debugging
   action: DEBUG
+  # reduce the logging for aws, too much is logged under the default INFO
+  com.amazonaws: WARN
 
   # gateway
   #gateway: DEBUG
