move to 0.9.1 snapshot release
Former-commit-id: cb92d22e841ef3ed31ea0f6d7ae72e6e4ba33a95

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
 sdf.setTimeZone(TimeZone.getTimeZone("UTC"));
 buildTimeStr = sdf.format(buildTime)
 
-versionNumber = '0.9.0'
+versionNumber = '0.9.1-SNAPSHOT'
 
 explodedDistDir = new File(distsDir, 'exploded')
 explodedDistLibDir = new File(explodedDistDir, 'lib')
