Analysis: Add `char_filter` on top of `tokenizer`, `filter`, and `analyzer`. Add an `html_strip` char filter, closes #315.
Former-commit-id: 98bc8285ea4d169e4a2448239ca1819c96fa98b2

--- a/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
+++ b/modules/elasticsearch/src/test/java/org/elasticsearch/index/analysis/test1.yml
@@ -3,6 +3,11 @@ index :
     tokenizer :
       standard :
         type : standard
+    char_filter :
+      my_html :
+        type : html_strip
+        escaped_tags : [xxx, yyy]
+        read_ahead : 1024
     filter :
       stop :
         type : stop
@@ -17,3 +22,6 @@ index :
       custom1 :
         tokenizer : standard
         filter : [stop, stop2]
+      custom2 :
+        tokenizer : standard
+        char_filter : [html_strip, my_html]
