--- a/gradle/gradle-wrapper.properties
+++ b/gradle/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-#Fri Jun 11 01:01:20 IDT 2010
+#Mon Aug 16 12:38:18 IDT 2010
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.9-preview-3
+distributionVersion=0.9-rc-1
 zipStorePath=wrapper/dists
 urlRoot=http\://dist.codehaus.org/gradle
 distributionName=gradle
