add (commented) playing with trying to execute from gradle
Former-commit-id: c7f765d025999607597640f4b0969a83e27bbec3

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,11 @@ configurations {
     }
 }
 
+//task run(dependsOn: [configurations.distLib], description: 'Runs') << {
+//    ant.java(classname: "org.elasticsearch.bootstrap.Bootstrap", fork: "true", classpath: configurations.distLib.asPath,
+//             jvmargs: "-Des-foreground=yes")
+//}
+
 dependencies {
     distLib project(':elasticsearch')
 }
