add load test for recovery from gateway
Former-commit-id: edbd586ee5c266c169451f6ba0f5a6a23068040d

--- a/modules/test/integration/src/test/java/org/elasticsearch/test/integration/gateway/fs/ChunkFsIndexGatewayTests.yml
+++ b/modules/test/integration/src/test/java/org/elasticsearch/test/integration/gateway/fs/ChunkFsIndexGatewayTests.yml
@@ -4,7 +4,7 @@ cluster:
 gateway:
   type: fs
   fs:
-    chunk_size: 128b
+    chunk_size: 11k
 index:
   number_of_shards: 1
   number_of_replicas: 1
