--- a/modules/test/testng/src/main/java/log4j.properties
+++ b/modules/test/testng/src/main/java/log4j.properties
@@ -2,6 +2,7 @@ log4j.rootLogger=INFO, out
 log4j.logger.jgroups=WARN
 
 #log4j.logger.action=DEBUG
+#log4j.logger.gateway=DEBUG
 #log4j.logger.transport=TRACE
 #log4j.logger.discovery=TRACE
 #log4j.logger.cluster.service=TRACE
