improve GC logging
Former-commit-id: 7709cd1bc208f5fc916217934d11cab03f8e2833

--- a/modules/benchmark/micro/src/main/java/log4j.properties
+++ b/modules/benchmark/micro/src/main/java/log4j.properties
@@ -9,7 +9,7 @@ log4j.logger.jgroups=WARN
 #log4j.logger.index.shard=TRACE
 #log4j.logger.index.cache=DEBUG
 #log4j.logger.http=TRACE
-log4j.logger.monitor.memory=TRACE
+#log4j.logger.monitor.jvm=DEBUG
 #log4j.logger.cluster.action.shard=TRACE
 #log4j.logger.index.gateway=TRACE
 
