Gateway: Default to `local` gateway (replace `none` gateway), closes #347.
Former-commit-id: 042af200e80930aafedb8a6f85eab12d06501189

--- a/modules/jarjar/build.gradle
+++ b/modules/jarjar/build.gradle
@@ -62,7 +62,7 @@ jar << {
         copy(file: jarjarArchivePath, tofile: jar.archivePath)
         delete(file: jarjarArchivePath)
 
-        // seems like empty dirst still exists, unjar and clean them
+        // seems like empty dirs still exists, unjar and clean them
         unjar(src: jar.archivePath, dest: "build/tmp/extracted")
         delete(dir: "build/tmp/extracted/jsr166y")
         delete(dir: "build/tmp/extracted/gnu/trove")
