Thrift Plugin: Expose REST interface using thrift, closes #354.
Former-commit-id: 4f08801bb989be3c2dd03a44e644c7df6b19cf65

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include 'plugins-analysis-icu'
 include 'plugins-mapper-attachments'
 include 'plugins-client-groovy'
 include 'plugins-transport-memcached'
+include 'plugins-transport-thrift'
 
 rootProject.name = 'elasticsearch-root'
 rootProject.children.each {project ->
