add date by default to logs outputted
Former-commit-id: 5b9dc45b7feca42df1f24b8cf7ce63fe9f39bc76

--- a/config/logging.yml
+++ b/config/logging.yml
@@ -17,7 +17,7 @@ appender:
     type: console
     layout:
       type: consolePattern
-      conversionPattern: "[%d{ABSOLUTE}][%-5p][%-25c] %m%n"
+      conversionPattern: "[%d{ISO8601}][%-5p][%-25c] %m%n"
 
   file:
     type: dailyRollingFile
@@ -25,5 +25,5 @@ appender:
     datePattern: "'.'yyyy-MM-dd"
     layout:
       type: pattern
-      conversionPattern: "[%d{ABSOLUTE}][%-5p][%-25c] %m%n"
+      conversionPattern: "[%d{ISO8601}][%-5p][%-25c] %m%n"
       
