--- a/settings.gradle
+++ b/settings.gradle
@@ -15,7 +15,7 @@ include 'plugins-mapper-attachments'
 include 'plugins-client-groovy'
 include 'plugins-transport-memcached'
 include 'plugins-transport-thrift'
-include 'plugins-indexer-twitter'
+include 'plugins-river-twitter'
 
 rootProject.name = 'elasticsearch-root'
 rootProject.children.each {project ->
