River CouchDB Plugin, closes #382.
Former-commit-id: ecaaeb5250090139f32f275372460232fbfbee97

--- a/plugins/river/twitter/src/main/java/es-plugin.properties
+++ b/plugins/river/twitter/src/main/java/es-plugin.properties
@@ -1,2 +1,2 @@
-plugin=org.elasticsearch.plugin.river.twitter.RiverTwitterPlugin
+plugin=org.elasticsearch.plugin.river.twitter.TwitterRiverPlugin
 
