--- a/plugins/river/rabbitmq/src/main/java/es-plugin.properties
+++ b/plugins/river/rabbitmq/src/main/java/es-plugin.properties
@@ -1,2 +1,2 @@
-plugin=org.elasticsearch.plugin.river.rabbitmq.RiverRabbitMQPlugin
+plugin=org.elasticsearch.plugin.river.rabbitmq.RabbitmqRiverPlugin
 
