--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ include 'plugins-cloud-aws'
 include 'plugins-hadoop'
 include 'plugins-analysis-icu'
 include 'plugins-mapper-attachments'
-include 'plugins-client-groovy'
+include 'plugins-lang-groovy'
 
 include 'plugins-transport-memcached'
 include 'plugins-transport-thrift'
