--- a/plugins/lang/groovy/build.gradle
+++ b/plugins/lang/groovy/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile project(':elasticsearch')
 
     groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '1.7.5'
+    distLib('org.codehaus.groovy:groovy-all:1.7.5') { transitive = false }
 
     testCompile project(':test-testng')
     testCompile('org.testng:testng:5.10:jdk15') { transitive = false }
