JavaScript Plugin: Allow to use javascript for scripts, closes #401.
Former-commit-id: 5b8bc333bdbfe582fab8c8a83fa601616fbd185d

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,9 @@ include 'plugins-cloud-aws'
 include 'plugins-hadoop'
 include 'plugins-analysis-icu'
 include 'plugins-mapper-attachments'
+
 include 'plugins-lang-groovy'
+include 'plugins-lang-javascript'
 
 include 'plugins-transport-memcached'
 include 'plugins-transport-thrift'
