build structure for ruby support, problems in figuring out how to execute the ruby scripts in the most optimal manner
Former-commit-id: 6371ed7d784df198b7772b009a72ea4bc9218d5d

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ include 'plugins-mapper-attachments'
 
 include 'plugins-lang-groovy'
 include 'plugins-lang-javascript'
+//include 'plugins-lang-ruby' #disabled for now ...
 
 include 'plugins-transport-memcached'
 include 'plugins-transport-thrift'
