Wikipedia River: A river to index wikipedia, closes #403.
Former-commit-id: c4d17860a1e4ee48cb62ae2cd8a04e87f6f3dde4

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include 'plugins-transport-memcached'
 include 'plugins-transport-thrift'
 
 include 'plugins-river-twitter'
+include 'plugins-river-wikipedia'
 include 'plugins-river-rabbitmq'
 include 'plugins-river-couchdb'
 
