move operation routing to be cluster level and not index level
Former-commit-id: 4c8978237fdb07ed81fc7cb0255f43cfe7c1f490

--- a/modules/test/integration/src/test/java/org/elasticsearch/test/integration/search/TwoInstanceUnbalancedShardsEmbeddedSearchTests.yml
+++ b/modules/test/integration/src/test/java/org/elasticsearch/test/integration/search/TwoInstanceUnbalancedShardsEmbeddedSearchTests.yml
@@ -1,8 +1,8 @@
 cluster:
   routing:
     schedule: 100ms
+    operation:
+      type: org.elasticsearch.test.integration.search.TwoInstanceUnbalancedShardsEmbeddedSearchTests$UnevenOperationRoutingModule
 index:
   number_of_shards: 3
   number_of_replicas: 0
-  routing:
-    type: org.elasticsearch.test.integration.search.TwoInstanceUnbalancedShardsEmbeddedSearchTests$UnevenOperationRoutingModule
