When on linux, force it not to swap elasticsearch process (jvm), closes #464.
Former-commit-id: 96a1ad6335a9b736aed1f561c9c2b94b6d876a19

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ allprojects {
         mavenRepo urls: 'http://elasticsearch.googlecode.com/svn/maven'
         mavenRepo urls: 'http://oss.sonatype.org/content/repositories/releases'
         mavenRepo urls: 'http://oss.sonatype.org/content/repositories/snapshots'
+        mavenRepo urls: 'http://download.java.net/maven/2/'
     }
 }
 
