--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile('org.slf4j:slf4j-log4j12:1.5.11') { transitive = false }
     compile('log4j:log4j:1.2.15') { transitive = false }
 
+    compile('net.java.dev.jna:jna:3.2.7') { transitive = false }
+
     compile 'org.apache.lucene:lucene-core:3.0.2'
     compile 'org.apache.lucene:lucene-analyzers:3.0.2'
     compile 'org.apache.lucene:lucene-queries:3.0.2'
@@ -130,6 +132,7 @@ uploadArchives {
 
         pom.whenConfigured {pom ->
             pom.dependencies = pom.dependencies.findAll {dep -> dep.scope != 'test' } // removes the test scoped ones
+            pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('jna') } // remove jna, its optional
             pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('jarjar') }
             pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('log4j') }
             pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('slf4j') }
