--- a/gradle/gradle-wrapper.properties
+++ b/gradle/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-#Mon Aug 16 12:38:18 IDT 2010
+#Sat Oct 30 19:56:02 IST 2010
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.9-rc-1
+distributionVersion=0.9-rc-2
 zipStorePath=wrapper/dists
 urlRoot=http\://dist.codehaus.org/gradle
 distributionName=gradle
